objects/Reference_Transaction_Details__c.object
<CustomObject>
    <description>Stores lines of data from SAP regarding a reference transaction related to a Case.</description>
    <label>Reference Transaction Details</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Reference Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Transaction Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <inlineHelpText>The Case to which this detail is linked</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SAP Reference Transaction Details</relationshipLabel>
        <relationshipName>Reference_Transaction_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <inlineHelpText>Material Number from SAP</inlineHelpText>
        <label>Material</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <inlineHelpText>Net Value of the order item in document currency.</inlineHelpText>
        <label>Net Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ref_Txn_No__c</fullName>
        <formula>Case__r.Reference_Transaction_Number__c</formula>
        <label>Ref. Txn No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>SAP Line Item description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Select_Line_Item__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Select Line Item</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>